# rust_practise

./: .gitignore  README.md
2 scrape_url/: .gitignore
2 scrape_url/src/: main.rs
3 httpie/: Cargo.toml
3 httpie/src/: main.rs
4 thumbor/: build.rs
4 thumbor/src/: main.rs
4 thumbor/src/engine/: photon.rs
5 queryer/examples/: covid.rs
5 queryer/queryer/: Cargo.toml
5 queryer/queryer-py/: .gitignore  Cargo.toml
5 queryer/src/: lib.rs
6 web_crawler/: Cargo.toml
6 web_crawler/src/: main.rs
scrape_url/: Cargo.toml
