[package]
name = "web_crawler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = [ "blocking"] }
scraper = "0.14.0"
# http = "0.2.7"
# tokio = {version ="1.18.2",features = ["full"] }
# serde_json = "1.0.81"
# jsonpath = "0.1.1"
